Fix css problem of white space at the right when the browser expands over 1024px & sidenav opens - forgotten files

--- a/webclient/src/core/components/HeaderLayout/HeaderLayout.scss
+++ b/webclient/src/core/components/HeaderLayout/HeaderLayout.scss
@@ -5,7 +5,8 @@
   background: $header-colour;
   position: fixed;
   top: 0;
-  width: inherit;
+  left: 0;
+  right: 0;
   font-size: 20px;
   box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 2px 9px 1px rgba(0, 0, 0, 0.12),
     0 4px 2px -2px rgba(0, 0, 0, 0.2);
@@ -16,6 +17,7 @@
   align-items: stretch;
   align-content: center;
   z-index: 1;
+  transition: left $transition;
 }
 
 .header__menu {
@@ -32,6 +34,9 @@
   opacity: 1;
 }
 @media (min-width: 1025px) {
+  .header {
+    left: $side-nav-max-width;
+  }
   .header__menu {
     visibility: hidden;
   }
